+ Added: Mohist: protect mod blocks via interact_general flag
- Fixed: SkinsRestorer integration error