@@ -1,2 +1,10 @@
-+ Added: Mohist: protect mod blocks via interact_general flag
-- Fixed: SkinsRestorer integration error
++ Added: [Suggestion] You can now define min and max distance for each world at rtp
+  # Worlds where players should be able to use /lands wild.
+  # You can use '*' as a entry, to allow all worlds.
+  # Entry format: worldName:minDistance:maxDistance
+  # The minimum and maximum distance is measured from the world spawn (/setworldspawn).
+  wild-worlds_list:
+    - "world:800:30000"
+
+- Fixed: LandCreateEvent cancellation issue
+- Fixed: Multi locale setup
